added location for rss feed to settings

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ AUTOMATIC_UPDATE = 1
 
 # after how many minutes the program should rerun
 UPDATE_AFTER_MINUTES = 30
+
+# url of rss feed
+RSS_FEED = google.com
